Convert Project to Maven and JavaFX 17