@@ -6,12 +6,19 @@
 Developed by AJITH KP [ [@ajithkp560](https://fb.com/ajithkp560) ]
 
 ## Run The Project
-> Needs JRE 1.8
-> Download the PacMan.jar file in BIN directory
+> JDK 11 or Higher
+> Run From Source
 ``
-java -jar PacMan.jar
+mvn clean javafx:run
 ``
-
+> Run From JAR File
+``
+java --module-path <JavaFX Library Location> --add-modules javafx.controls,javafx.fxml -jar ./target/PacMan-1.0.0.jar
+``
+Sample,
+``
+java --module-path F:\Installed\javafx-sdk-17.0.13\lib --add-modules javafx.controls,javafx.fxml -jar ./target/PacMan-1.0.0.jar
+``
 ## License
 [GNU General Public License v3.0](https://choosealicense.com/licenses/gpl-3.0/)
 
